alpm-types/src/version/snapshots/pkg_minimal::minimal_version_from_str_parse_error@case_09_ends_with_colon.snap
---
source: alpm-types/src/version/pkg_minimal.rs
---
error: invalid minimal alpm-package-version
 | 
 | 1-foo:
 |  ^ expected the package version to end with an alpm-pkgver
